# python-flask-server/swagger_server/models/citizen.py
@@ -17,45 +17,40 @@ class Citizen(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, real_name: str=None, email: str=None, phone_number: str=None, mutation_pending: bool=True, subsidies: List[SubsidyBase]=None):  # noqa: E501
+    def __init__(self, id: str=None, name: str=None, email: str=None, phone_number: str=None, subsidies: List[SubsidyBase]=None):  # noqa: E501
         """Citizen - a model defined in Swagger
 
         :param id: The id of this Citizen.  # noqa: E501
         :type id: str
-        :param real_name: The real_name of this Citizen.  # noqa: E501
-        :type real_name: str
+        :param name: The name of this Citizen.  # noqa: E501
+        :type name: str
         :param email: The email of this Citizen.  # noqa: E501
         :type email: str
         :param phone_number: The phone_number of this Citizen.  # noqa: E501
         :type phone_number: str
-        :param mutation_pending: The mutation_pending of this Citizen.  # noqa: E501
-        :type mutation_pending: bool
         :param subsidies: The subsidies of this Citizen.  # noqa: E501
         :type subsidies: List[SubsidyBase]
         """
         self.swagger_types = {
             'id': str,
-            'real_name': str,
+            'name': str,
             'email': str,
             'phone_number': str,
-            'mutation_pending': bool,
             'subsidies': List[SubsidyBase]
         }
 
         self.attribute_map = {
             'id': 'id',
-            'real_name': 'real_name',
+            'name': 'name',
             'email': 'email',
             'phone_number': 'phone_number',
-            'mutation_pending': 'mutation_pending',
             'subsidies': 'subsidies'
         }
 
         self._id = id
-        self._real_name = real_name
+        self._name = name
         self._email = email
         self._phone_number = phone_number
-        self._mutation_pending = mutation_pending
         self._subsidies = subsidies
 
     @classmethod
@@ -91,25 +86,25 @@ class Citizen(Model):
         self._id = id
 
     @property
-    def real_name(self) -> str:
-        """Gets the real_name of this Citizen.
+    def name(self) -> str:
+        """Gets the name of this Citizen.
 
 
-        :return: The real_name of this Citizen.
+        :return: The name of this Citizen.
         :rtype: str
         """
-        return self._real_name
+        return self._name
 
-    @real_name.setter
-    def real_name(self, real_name: str):
-        """Sets the real_name of this Citizen.
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Citizen.
 
 
-        :param real_name: The real_name of this Citizen.
-        :type real_name: str
+        :param name: The name of this Citizen.
+        :type name: str
         """
 
-        self._real_name = real_name
+        self._name = name
 
     @property
     def email(self) -> str:
@@ -152,27 +147,6 @@ class Citizen(Model):
         """
 
         self._phone_number = phone_number
-
-    @property
-    def mutation_pending(self) -> bool:
-        """Gets the mutation_pending of this Citizen.
-
-
-        :return: The mutation_pending of this Citizen.
-        :rtype: bool
-        """
-        return self._mutation_pending
-
-    @mutation_pending.setter
-    def mutation_pending(self, mutation_pending: bool):
-        """Sets the mutation_pending of this Citizen.
-
-
-        :param mutation_pending: The mutation_pending of this Citizen.
-        :type mutation_pending: bool
-        """
-
-        self._mutation_pending = mutation_pending
 
     @property
     def subsidies(self) -> List[SubsidyBase]:
